# OS2_AS2

./: .gitignore  CMakeLists.txt  README.md  config.h  customer.h  helper_functions.c  helper_functions.h  main.c  queue.c  queue.h  supermarket.c  supermarket.h
docs/: report.typ
